# Contact-Server

./: CMakeLists.txt  main.cpp  makefile
BlockDataStruct/: BlockQueue.hpp
ConnectionPool/: Connection.cpp  Connection.h  ConnectionPool.cpp  ConnectionPool.h
MatchScheduler/: MatchScheduler.cpp  MatchScheduler.h
Server/: PacketDefinition.hpp  Server.cpp  Server.h  ServerDealPacket.cpp
Session/: Client.h  VideoRoom.cpp  VideoRoom.h
